--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <base href="./">
     <link rel="icon" type="image/x-icon" href="https://kyzyl.me/favicon.ico">
     <!-- Import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css">   
+    <link rel="stylesheet" href="./style.css">   
     
   </head>  
   <body>
@@ -32,6 +32,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.11.0/dist/tf.min.js" type="text/javascript"></script>
 
     <!-- Import the page's JavaScript to do some stuff -->
-    <script type="module" src="/script.js"></script>
+    <script type="module" src="./script.js"></script>
   </body>
 </html>
