added basic image output and ui clean up

--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
       <video id="webcam" autoplay muted></video>
     </div>
 
-    <div class="canvas-container">
-    </div>
+    
 
     <div class="button-container">
+      <div class="output-container"> HI
+        <!-- <canvas id="output-canvas" width="50" height="50"> HI</canvas> -->
+      </div>
       <button id="enableCam">Enable Webcam</button>
       <div class="class-container">
         <div class="class1-canvas-container"></div>
