selected image displayed on video

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="button-container">
-      <div class="output-container">Input Mode <img id="debugimage" height="200"></div>
+      <div id="debug-container">Input Mode</div>
       <button id="enableCam">Enable Webcam</button>
       <div class="class-container">
         <!-- Class buttons Generated in script.js -->
