--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
     ></script>
 
     <!-- Import the page's JavaScript to do some stuff -->
-    <script type="module" src="./script.js"></script>
+    <!-- <script type="module" src="./script.js"></script> -->
+    <script type="module" src="./Output.js"></script>
+    <script type="module" src="./Training.js"></script>
+    <script type="module" src="./Input.js"></script>
+    
   </body>
 </html>
