code prettified and output renamed to predict

--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
 
     <!-- Import the page's JavaScript to do some stuff -->
     <!-- <script type="module" src="./script.js"></script> -->
-    <script type="module" src="./Output.js"></script>
-    <script type="module" src="./Training.js"></script>
-    <script type="module" src="./Input.js"></script>
-    
+    <script type="module" src="./predict.js"></script>
+    <script type="module" src="./training.js"></script>
+    <script type="module" src="./input.js"></script>
   </body>
 </html>
