--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       </div>
       <button id="addClass">Add</button>
       <button id="next">Next</button>
-      <button id="predict">Run</button>
-      <button id="reset">Reset</button>
+      <button id="predict" class="removed">Run</button>
+      <!-- <button id="reset">Reset</button> -->
     </div>
 
     <!-- Import TensorFlow.js library -->
