--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     </div>
 
     <div class="button-container">
-      <div id="debug-container">Input Mode</div>
+      <div id="debug-container"> Tool Bar</div>
       <button id="enableCam">Enable Webcam</button>
       <div class="class-container">
         <!-- Class buttons Generated in script.js -->
       </div>
-      <button id="addClass">Add</button>
-      <button id="next">Next</button>
+      <button id="addClass" class="removed">Add</button>
+      <button id="next" class="removed">Next</button>
       <button id="predict" class="removed">Run</button>
       <!-- <button id="reset">Reset</button> -->
     </div>
