--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- Import the page's JavaScript to do some stuff -->
     <!-- <script type="module" src="./script.js"></script> -->
     <script type="module" src="./predict.js"></script>
-    <script type="module" src="./training.js"></script>
-    <script type="module" src="./input.js"></script>
+    <script type="module" src="./modeoutput.js"></script>
+    <script type="module" src="./modeinput.js"></script>
   </body>
 </html>
