cosmetic ui corrections

--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
       <div class="class-container">
         <!-- Class buttons Generated in script.js -->
       </div>
-      <button id="addClass" class="removed">Add</button>
-      <button id="next" class="removed">Next</button>
-      <button id="predict" class="removed">Run</button>
+      <div class="navigation-buttons">
+        <button id="addClass" class="removed">Add</button>
+        <button id="next" class="removed">Next</button>
+        <button id="predict" class="removed">Run</button>
+      </div>
       <!-- <button id="reset">Reset</button> -->
     </div>
 
