added AR (aframe + 8th wall)

--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Transfer Learning - TensorFlow.js</title>
+    <title>TeachableReality</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <base href="./" />
     <link rel="icon" type="image/x-icon" href="https://kyzyl.me/favicon.ico" />
     <script src="https://unpkg.com/konva@8/konva.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <script src="https://cdn.8thwall.com/web/aframe/8frame-1.2.0.min.js"></script>
+    <script src="https://cdn.8thwall.com/web/xrextras/xrextras.js"></script>
+    <script
+      async
+      src="https://apps.8thwall.com/xrweb?appKey=f0LPUhzxQRN1kc4sv4mM4ZRsl663KCFL7y7fj3Uc5wN7TNKY7TbKuJlwz5uu0zGbngfYA3"
+    ></script>
+
+
     <!-- Import the webpage's stylesheet -->
     <link rel="stylesheet" href="./style.css" />
   </head>
@@ -17,12 +27,53 @@
     <p id="status">Awaiting TF.js load</p>
 
     <div class="video-container">
-      <video id="webcam" autoplay muted></video>
+      <!-- <video id="webcam" autoplay muted></video> -->
+      <a-scene
+        embedded
+        style= "display: block; z-index: 0;"
+        id="scene"
+        tap-place
+        xrextras-almost-there
+        xrextras-gesture-detector
+        xrextras-loading
+        xrextras-runtime-error
+        renderer="colorManagement:true"
+        xrweb="allowedDevices:any;"
+      >
+        <a-camera
+          id="camera"
+          position="0 8 0"
+          raycaster="objects: .cantap"
+          cursor="
+            fuse: false;
+            rayOrigin: mouse;"
+        >
+        </a-camera>
+
+        <a-assets>
+          <!-- Download from https://github.com/8thwall/web/blob/master/examples/aframe/placeground/tree.glb -->
+          <a-asset-item
+            id="treeModel"
+            src="https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/tree.glb?v=1657750939103"
+            ></a-asset-item>
+        </a-assets>
+
+        <a-box
+          id="ground"
+          class="cantap"
+          scale="1000 2 1000"
+          position="0 -1 0"
+          material="shader: shadow; transparent: true; opacity: 0.4"
+          shadow
+        >
+        </a-box>
+      </a-scene>
     </div>
 
     <div class="button-container">
       <div id="debug-container"> Tool Bar</div>
-      <button id="enableCam">Enable Webcam</button>
+      <canvas style= "z-index: 1;" id="cameraFeed" class="removed"></canvas>
+      <button id="startMachine">Start</button>
       <div class="class-container">
         <!-- Class buttons Generated in script.js -->
       </div>
