--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="video-container">
       <!-- <video id="webcam" autoplay muted></video> -->
       <a-scene
-        style= "display: block; z-index: 0;"
+        style="display: block; z-index: 0"
         id="scene"
         tap-place
         xrextras-almost-there
@@ -47,16 +47,64 @@
             fuse: false;
             rayOrigin: mouse;"
         >
-        <a-entity id="holdAnchor" position="0 0 -3"></a-entity>
+          <a-entity id="holdAnchor" position="0 0 -3"></a-entity>
         </a-camera>
+
+        <!-- <a-entity id="imageEntity" physics-image-target="name: researchPaper-1" visible="false">
+            <a-entity
+              id="3DObj-0"
+              gltf-model="#treeModel"
+              class="cantap 3DObj objOnImage"
+              hold-drag ="groundId: image-plane"
+              xrextras-two-finger-rotate 
+              xrextras-pinch-scale 
+              scale="3 3 3"
+              shadow="receive: false"
+            >
+            </a-entity>
+            <a-plane
+              id="image-plane"
+              class="cantap"
+              rotation="0 0 0"
+              width="10" 
+              height="10"
+              material="shader: shadow; transparent: true; opacity: 0.4" 
+              shadow
+            >
+            </a-plane>
+        </a-entity> -->
+
+        <!-- <a-entity id="wallEntity" visible="true" position="0 0 -20">
+          <a-entity
+              id="3DObj-1"
+              gltf-model="#treeModel"
+              class="cantap 3DObj"
+              hold-drag="groundId: wall"
+              xrextras-two-finger-rotate 
+              xrextras-pinch-scale 
+              scale="3 3 3"
+              shadow="receive: false"
+            >
+            </a-entity>
+            <a-plane
+              id="wall"
+              class="cantap"
+              rotation="0 0 0"
+              width="10" 
+              height="10"
+              material="color:white; transparent: true; opacity: 0.4" 
+              shadow
+            >
+            </a-plane>
+        </a-entity> -->
 
         <a-assets>
           <!-- Download from https://github.com/8thwall/web/blob/master/examples/aframe/placeground/tree.glb -->
           <a-asset-item
             id="treeModel"
             src="https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/tree.glb?v=1657750939103"
-            ></a-asset-item>
-            <img id="imageAsset" src=".\images\blankClass.png">
+          ></a-asset-item>
+          <img id="imageAsset" src=".\images\blankClass.png" />
         </a-assets>
 
         <a-box
@@ -72,14 +120,19 @@
     </div>
 
     <div class="button-container">
-      <div id="debug-container"> Tool Bar</div>
-      <canvas style= "z-index: 1;" id="cameraFeed" class="removed"></canvas>
+      <div id="debug-container">Tool Bar</div>
+      <canvas style="z-index: -1; display: none;" id="cameraFeed" class="removed"></canvas>
       <button id="startMachine">Start</button>
       <div class="class-container">
         <!-- Class buttons Generated in script.js -->
       </div>
       <div class="navigation-buttons">
         <button id="addClass" class="removed">Add</button>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <button id="next" class="removed">Next</button>
         <button id="predict" class="removed">Run</button>
       </div>
@@ -91,6 +144,26 @@
       src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.11.0/dist/tf.min.js"
       type="text/javascript"
     ></script>
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+
+      <!-- Modal content -->
+      <div class="modal-content">
+        <div class="modal-header">
+          <span class="close">&times;</span>
+          <h2>Modal Header</h2>
+        </div>
+        <div class="modal-body">
+          <p>Some text in the Modal Body</p>
+          <p>Some other text...</p>
+        </div>
+        <div class="modal-footer">
+          <h3>Modal Footer</h3>
+        </div>
+      </div>
+
+    </div>
 
     <!-- Import the page's JavaScript to do some stuff -->
     <!-- <script type="module" src="./script.js"></script> -->
