--- a/examples/shadowanimal-index.html
+++ b/examples/shadowanimal-index.html
@@ -102,6 +102,52 @@
           <img id="imageAsset" src=".\images\blankClass.png" />
         </a-assets>
 
+        <a-entity
+          id="3DObj-0"
+          xrextras-pinch-scale
+          xrextras-two-finger-rotate
+          xrextras-hold-drag
+          gltf-model="https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/Deer-White.glb?v=1661773615034" 
+          class="cantap 3DObj"
+          position="0 0 -5"
+          rotation="0 -180 0"
+          scale="0.007 0.007 0.007"
+          shadow="true"
+        >
+        </a-entity>
+
+
+        <a-entity
+          id="3DObj-1"
+          xrextras-pinch-scale
+          xrextras-two-finger-rotate
+          xrextras-hold-drag
+          gltf-model="https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/Dog-White.glb?v=1661773629893" 
+          class="cantap 3DObj"
+          position="0 0 -5"
+          rotation="0 -90 0"
+          scale="0.1 0.1 0.1"
+          shadow="true"
+        >
+        </a-entity>
+
+
+        <a-entity
+          id="3DObj-2"
+          xrextras-pinch-scale
+          xrextras-two-finger-rotate
+          xrextras-hold-drag
+          gltf-model="https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/Elephant-white.glb?v=1661773629893" 
+          class="cantap 3DObj"
+          position="0 0 -5"
+          rotation="0 -90 0"
+          scale="0.035 0.035 0.035"
+          shadow="true"
+        >
+        </a-entity>
+
+
+
         <a-box
           id="ground"
           class="cantap"
@@ -146,7 +192,6 @@
 
     <!-- The Modal -->
     <div id="myModal" class="modal">
-
       <!-- Modal content -->
       <div class="modal-content">
         <div class="modal-header">
@@ -161,7 +206,6 @@
           <h3>Modal Footer</h3>
         </div>
       </div>
-
     </div>
 
     <!-- Import the page's JavaScript to do some stuff -->
