--- a/examples/phoneDND-index.html
+++ b/examples/phoneDND-index.html
@@ -12,8 +12,6 @@
 
     <script src="https://cdn.8thwall.com/web/aframe/8frame-1.2.0.min.js"></script>
     <script src="https://cdn.8thwall.com/web/xrextras/xrextras.js"></script>
-
-<script src="//cdn.8thwall.com/web/aframe/aframe-extras-6.1.1.min.js"></script>
     <script
       async
       src="https://apps.8thwall.com/xrweb?appKey=f0LPUhzxQRN1kc4sv4mM4ZRsl663KCFL7y7fj3Uc5wN7TNKY7TbKuJlwz5uu0zGbngfYA3"
@@ -98,9 +96,38 @@
             id="treeModel"
             src="https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/tree.glb?v=1657750939103"
           ></a-asset-item>
-          <a-asset-item id="animatedModel" src="./assets/robot.glb"></a-asset-item>
           <img id="imageAsset" src=".\images\blankClass.png" />
         </a-assets>
+
+        <a-entity
+          id="3DObj-0"
+          xrextras-pinch-scale
+          xrextras-two-finger-rotate
+          xrextras-hold-drag
+          geometry="primitive: box; width: 2; height: 2; depth:2" material="color: white; transparent: true; opacity: 0"
+          class="cantap 3DObj"
+          position="0 0 0"
+          scale="1 1 1"
+        >
+        <a-text position="-0.5 1 0" scale="0.5 0.5 0.5" value="Do not Disturb"></a-text>
+        <a-image position="0 0.75 0" scale="0.5 0.5 0.5" src="https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/downArrow.png?v=1661609300013"></a-image>
+        <a-image position="0 0 0" width="2" height="2" rotation="-90 0 0" src="https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/phoneoutline.png?v=1661610835581"></a-image>
+      </a-entity>
+
+      <a-entity
+          id="3DObj-1"
+          xrextras-pinch-scale
+          xrextras-two-finger-rotate
+          xrextras-hold-drag
+          geometry="primitive: box; width: 2; height: 2; depth:2" material="color: white; transparent: true; opacity: 0"
+          class="cantap 3DObj"
+          position="3 0 0"
+          scale="1 1 1"
+        >
+        <a-image position="0 1.25 0" scale="0.5 0.5 0.5" src="https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/notifications-preview.png?v=1661612571713"></a-image>
+        <a-image position="0 0.75 0" scale="0.5 0.5 0.5" src="https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/downArrow.png?v=1661609300013"></a-image>
+        <a-image position="0 0 0" width="2" height="2" rotation="-90 0 0" src="https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/phoneoutline.png?v=1661610835581"></a-image>
+      </a-entity>
 
         <a-box
           id="ground"
@@ -146,7 +173,6 @@
 
     <!-- The Modal -->
     <div id="myModal" class="modal">
-
       <!-- Modal content -->
       <div class="modal-content">
         <div class="modal-header">
@@ -161,7 +187,6 @@
           <h3>Modal Footer</h3>
         </div>
       </div>
-
     </div>
 
     <!-- Import the page's JavaScript to do some stuff -->
