--- a/examples/researchPaper-index.html
+++ b/examples/researchPaper-index.html
@@ -12,8 +12,6 @@
 
     <script src="https://cdn.8thwall.com/web/aframe/8frame-1.2.0.min.js"></script>
     <script src="https://cdn.8thwall.com/web/xrextras/xrextras.js"></script>
-
-<script src="//cdn.8thwall.com/web/aframe/aframe-extras-6.1.1.min.js"></script>
     <script
       async
       src="https://apps.8thwall.com/xrweb?appKey=f0LPUhzxQRN1kc4sv4mM4ZRsl663KCFL7y7fj3Uc5wN7TNKY7TbKuJlwz5uu0zGbngfYA3"
@@ -51,11 +49,80 @@
           <a-entity id="holdAnchor" position="0 0 -3"></a-entity>
         </a-camera>
 
-        <!-- <a-entity
+        <a-entity
           id="imageEntity"
           physics-image-target="name: researchPaper-1"
           visible="false"
         >
+          <a-image
+            id="3DObj-0"
+            xrextras-pinch-scale
+            xrextras-two-finger-rotate
+            hold-drag="groundId: image-plane"
+            class="cantap 3DObj objOnImage"
+            position="0 1 0.1"
+            width="1.7"
+            height="1"
+            src="https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/videoResearchPaper.png?v=1661586471078"
+          ></a-image>
+          <a-image
+            id="3DObj-1"
+            xrextras-pinch-scale
+            xrextras-two-finger-rotate
+            hold-drag="groundId: image-plane"
+            class="cantap 3DObj objOnImage"
+            position="1.5 -1.3 0.1"
+            width="1.6"
+            height="0.5"
+            src="https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/citationOne.png?v=1661586467613"
+          ></a-image>
+          <a-image
+            id="3DObj-2"
+            xrextras-pinch-scale
+            xrextras-two-finger-rotate
+            hold-drag="groundId: image-plane"
+            class="cantap 3DObj objOnImage"
+            position="1.3 0 0.1"
+            width="1.2"
+            height="1.5"
+            src="https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/citationTwo.png?v=1661586468747"
+          ></a-image>
+          <!-- <a-box
+              id="3DObj-0"
+              src = "https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/videoResearchPaper.png?v=1661586471078"
+              class="cantap 3DObj objOnImage"
+              hold-drag ="groundId: image-plane"
+              xrextras-two-finger-rotate 
+              xrextras-pinch-scale 
+              depth = 0.5
+              rotation="0 0 0"
+              shadow="receive: false"
+            >
+            </a-box>
+            <a-box
+              id="3DObj-1"
+              src = "https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/citationOne.png?v=1661586467613"
+              class="cantap 3DObj objOnImage"
+              hold-drag ="groundId: image-plane"
+              xrextras-two-finger-rotate 
+              xrextras-pinch-scale 
+              depth = 0.5
+              rotation="0 0 0"
+              shadow="receive: false"
+            >
+            </a-box> -->
+          <!-- <a-box
+            id="3DObj-2"
+            src="https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/citationTwo.png?v=1661586468747"
+            class="cantap 3DObj objOnImage"
+            hold-drag="groundId: image-plane"
+            xrextras-two-finger-rotate
+            xrextras-pinch-scale
+            depth="0.5"
+            rotation="0 0 0"
+            shadow="receive: false"
+          >
+          </a-box> -->
           <a-plane
             id="image-plane"
             class="cantap"
@@ -66,7 +133,7 @@
             shadow
           >
           </a-plane>
-        </a-entity> -->
+        </a-entity>
 
         <!-- <a-entity id="wallEntity" visible="true" position="0 0 -20">
           <a-entity
@@ -98,11 +165,10 @@
             id="treeModel"
             src="https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/tree.glb?v=1657750939103"
           ></a-asset-item>
-          <a-asset-item id="animatedModel" src="./assets/robot.glb"></a-asset-item>
           <img id="imageAsset" src=".\images\blankClass.png" />
         </a-assets>
 
-        <a-box
+        <!-- <a-box
           id="ground"
           class="cantap"
           scale="1000 2 1000"
@@ -110,7 +176,7 @@
           material="shader: shadow; transparent: true; opacity: 0.4"
           shadow
         >
-        </a-box>
+        </a-box> -->
       </a-scene>
     </div>
 
@@ -146,7 +212,6 @@
 
     <!-- The Modal -->
     <div id="myModal" class="modal">
-
       <!-- Modal content -->
       <div class="modal-content">
         <div class="modal-header">
@@ -161,7 +226,6 @@
           <h3>Modal Footer</h3>
         </div>
       </div>
-
     </div>
 
     <!-- Import the page's JavaScript to do some stuff -->
