--- a/examples/phoneDND-index.html
+++ b/examples/phoneDND-index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <base href="./" />
+    <base href="./.." />
     <link rel="icon" type="image/x-icon" href="https://kyzyl.me/favicon.ico" />
     <script src="https://unpkg.com/konva@8/konva.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -23,7 +23,13 @@
   <body>
     <!-- <h1>Make your own "Teachable Machine" using Transfer Learning with MobileNet v3 in TensorFlow.js using saved graph model from TFHub.</h1> -->
 
-    <p id="status">Awaiting TF.js load</p>
+    <p id="status">
+      Debugger <br />
+      Awaiting TF.js load
+    </p>
+    <p id="timerContainer"> <input id="timerEnabled" type="checkbox" value="timerEnabled"> 
+      <p id="timer">Timer</p>
+    </p>
 
     <div class="video-container">
       <!-- <video id="webcam" autoplay muted></video> -->
@@ -104,30 +110,60 @@
           xrextras-pinch-scale
           xrextras-two-finger-rotate
           xrextras-hold-drag
-          geometry="primitive: box; width: 2; height: 2; depth:2" material="color: white; transparent: true; opacity: 0"
+          geometry="primitive: box; width: 2; height: 2; depth:2"
+          material="color: white; transparent: true; opacity: 0"
           class="cantap 3DObj"
           position="0 0 0"
           scale="1 1 1"
         >
-        <a-text position="-0.5 1 0" scale="0.5 0.5 0.5" value="Do not Disturb"></a-text>
-        <a-image position="0 0.75 0" scale="0.5 0.5 0.5" src="https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/downArrow.png?v=1661609300013"></a-image>
-        <a-image position="0 0 0" width="2" height="2" rotation="-90 0 0" src="https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/phoneoutline.png?v=1661610835581"></a-image>
-      </a-entity>
+          <a-text
+            position="-0.5 1 0"
+            scale="0.5 0.5 0.5"
+            value="Do not Disturb"
+          ></a-text>
+          <a-image
+            position="0 0.75 0"
+            scale="0.5 0.5 0.5"
+            src="https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/downArrow.png?v=1661609300013"
+          ></a-image>
+          <a-image
+            position="0 0 0"
+            width="2"
+            height="2"
+            rotation="-90 0 0"
+            src="https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/phoneoutline.png?v=1661610835581"
+          ></a-image>
+        </a-entity>
 
-      <a-entity
+        <a-entity
           id="3DObj-1"
           xrextras-pinch-scale
           xrextras-two-finger-rotate
           xrextras-hold-drag
-          geometry="primitive: box; width: 2; height: 2; depth:2" material="color: white; transparent: true; opacity: 0"
+          geometry="primitive: box; width: 2; height: 2; depth:2"
+          material="color: white; transparent: true; opacity: 0"
           class="cantap 3DObj"
           position="3 0 0"
           scale="1 1 1"
         >
-        <a-image position="0 1.25 0" scale="0.5 0.5 0.5" src="https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/notifications-preview.png?v=1661612571713"></a-image>
-        <a-image position="0 0.75 0" scale="0.5 0.5 0.5" src="https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/downArrow.png?v=1661609300013"></a-image>
-        <a-image position="0 0 0" width="2" height="2" rotation="-90 0 0" src="https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/phoneoutline.png?v=1661610835581"></a-image>
-      </a-entity>
+          <a-image
+            position="0 1.25 0"
+            scale="0.5 0.5 0.5"
+            src="https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/notifications-preview.png?v=1661612571713"
+          ></a-image>
+          <a-image
+            position="0 0.75 0"
+            scale="0.5 0.5 0.5"
+            src="https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/downArrow.png?v=1661609300013"
+          ></a-image>
+          <a-image
+            position="0 0 0"
+            width="2"
+            height="2"
+            rotation="-90 0 0"
+            src="https://cdn.glitch.global/dcd6b5e7-e048-4ae6-b52c-5911b57fca1f/phoneoutline.png?v=1661610835581"
+          ></a-image>
+        </a-entity>
 
         <a-box
           id="ground"
@@ -194,5 +230,6 @@
     <script type="module" src="./predict.js"></script>
     <script type="module" src="./modeoutput.js"></script>
     <script type="module" src="./modeinput.js"></script>
+    <script type="module" src="./customcomponents.js"></script>
   </body>
 </html>
