--- a/examples/researchPaper-index.html
+++ b/examples/researchPaper-index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <base href="./" />
+    <base href="./.." />
     <link rel="icon" type="image/x-icon" href="https://kyzyl.me/favicon.ico" />
     <script src="https://unpkg.com/konva@8/konva.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -23,7 +23,13 @@
   <body>
     <!-- <h1>Make your own "Teachable Machine" using Transfer Learning with MobileNet v3 in TensorFlow.js using saved graph model from TFHub.</h1> -->
 
-    <p id="status">Awaiting TF.js load</p>
+    <p id="status">
+      Debugger <br />
+      Awaiting TF.js load
+    </p>
+    <p id="timerContainer"> <input id="timerEnabled" type="checkbox" value="timerEnabled"> 
+      <p id="timer">Timer</p>
+    </p>
 
     <div class="video-container">
       <!-- <video id="webcam" autoplay muted></video> -->
@@ -233,5 +239,6 @@
     <script type="module" src="./predict.js"></script>
     <script type="module" src="./modeoutput.js"></script>
     <script type="module" src="./modeinput.js"></script>
+    <script type="module" src="./customcomponents.js"></script>
   </body>
 </html>
